# logapi

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  common.py  settings.py
src/logapi/: __init__.py  settings.py
